--- a/requirements.txt
+++ b/requirements.txt
@@ -1,129 +1,6 @@
-absl-py==2.1.0
-annotated-types==0.7.0
-anyio==4.9.0
-astunparse==1.6.3
-beautifulsoup4==4.13.3
-blinker==1.9.0
-blis==1.2.0
-breadability==0.1.20
-catalogue==2.0.10
-certifi==2024.12.14
-chardet==5.2.0
-charset-normalizer==3.4.1
-click==8.1.8
-cloudpathlib==0.20.0
-colorama==0.4.6
-confection==0.1.5
-contourpy==1.3.1
-cycler==0.12.1
-cymem==2.0.11
-docopt==0.6.2
-exceptiongroup==1.3.0
 fastapi==0.115.12
-filelock==3.16.1
-Flask==3.1.0
-flatbuffers==25.2.10
-fonttools==4.55.3
-fsspec==2024.12.0
-gast==0.6.0
-google-pasta==0.2.0
-grpcio==1.71.0
-h11==0.16.0
-h5py==3.13.0
-huggingface-hub==0.28.0
-idna==3.10
-itsdangerous==2.2.0
-Jinja2==3.1.5
-joblib==1.4.2
-keras==3.9.0
-kiwisolver==1.4.8
-langcodes==3.5.0
-language_data==1.3.0
-libclang==18.1.1
-lxml==5.3.0
-marisa-trie==1.2.1
-Markdown==3.7
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-matplotlib==3.10.0
-mdurl==0.1.2
-ml_dtypes==0.5.1
-MouseInfo==0.1.3
-mpmath==1.3.0
-murmurhash==1.0.12
-namex==0.0.8
-networkx==3.4.2
-nltk==3.9.1
-numpy==2.1.3
-opencv-python==4.11.0.86
-opt_einsum==3.4.0
-optree==0.14.1
-packaging==24.2
-pandas==2.2.3
-pillow==11.1.0
-preshed==3.0.9
-protobuf==5.29.3
-PyAutoGUI==0.9.54
-pycountry==24.6.1
-pydantic==2.10.5
-pydantic_core==2.27.2
-PyGetWindow==0.0.9
-Pygments==2.19.1
-PyMsgBox==1.0.9
-pyparsing==3.2.1
-pyperclip==1.9.0
-pypiwin32==223
-PyRect==0.2.0
-PyScreeze==1.0.1
-python-dateutil==2.9.0.post0
-python-multipart==0.0.20
-pytweening==1.2.0
-pytz==2024.2
-pywhatkit==5.4
-pywin32==308
-PyYAML==6.0.2
-regex==2024.11.6
-requests==2.32.3
-rich==13.9.4
-sacremoses==0.1.1
-safetensors==0.5.2
-scikit-learn==1.6.1
-scipy==1.15.1
-seaborn==0.13.2
-sentencepiece==0.2.0
-shellingham==1.5.4
-six==1.17.0
-smart-open==7.1.0
-sniffio==1.3.1
-soupsieve==2.6
-spacy==3.8.4
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-srsly==2.5.1
-starlette==0.46.2
-Summy==0.1
-sumy==0.11.0
-sympy==1.13.1
-tensorboard==2.19.0
-tensorboard-data-server==0.7.2
-tensorflow==2.19.0
-tensorflow-io-gcs-filesystem==0.31.0
-termcolor==2.5.0
-textblob==0.19.0
-thinc==8.3.4
-threadpoolctl==3.5.0
-tokenizers==0.21.0
-torch==2.5.1
-tqdm==4.67.1
-transformers==4.48.1
-typer==0.15.1
-typing_extensions==4.12.2
-tzdata==2024.2
-urllib3==2.3.0
 uvicorn==0.34.2
-wasabi==1.1.3
-weasel==0.4.1
-Werkzeug==3.1.3
-wikipedia==1.4.0
-wordcloud==1.9.4
-wrapt==1.17.2
+tensorflow-cpu==2.19.0 
+pillow==11.1.0
+scipy==1.15.1
+numpy==2.1.3
